# zmq.build

./: .gitmodules  CMakeLists.txt  README  build.cmd  checkoutandpatch.cmd  clrzmq.cmake  cppzmq.cmake  jzmq.cmake  libzmq.cmake  zeromq.cmake
cpp_examples/: CMakeLists.txt  gettimeofday.hpp  hwclient.cpp  paralleltasksink.cpp  paralleltaskventilator.cpp  paralleltaskworker.cpp  sleep.hpp  wuclient.cpp  wuserver.cpp
examples/c++/: CMakeLists.txt  durapub.cpp  durapub2.cpp  durasub.cpp  hwserver.cpp  lpclient.cpp  lpserver.cpp  lruqueue.cpp  mtrelay.cpp  mtserver.cpp  ppworker.cpp  psenvpub.cpp  rrserver.cpp  rtdealer.cpp  rtmama.cpp  rtpapa.cpp  spworker.cpp  suisnail.cpp  syncpub.cpp  tasksink.cpp  tasksink2.cpp  taskvent.cpp  tripping.cpp  wuserver.cpp  zhelpers.hpp
